<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/textview2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/morado_oscuro"
        android:gravity="center_vertical"
        android:paddingStart="30dp"
        android:text="@string/titulo_second_fragment"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/descripcion_imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview2"
        android:src="@drawable/icon_primera_pregunta"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/pregunta_second_fragment"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/radiogroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@id/boton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView3">

        <RadioButton
            android:id="@+id/respuesta1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion1"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/respuesta2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion2"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/respuesta3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion3"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/respuesta4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion4"
            android:textSize="20sp" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/boton2"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/morado_oscuro"
        android:text="@string/boton_second_fragment"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radiogroup" />
</androidx.constraintlayout.widget.ConstraintLayout>