<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/descripcion_imagen2"
        app:layout_constraintBottom_toTopOf="@id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/icon_segunda_pregunta"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/pregunta_third_fragment"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/radiogroup2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2" />

    <RadioGroup
        android:id="@+id/radiogroup2"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@id/boton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5">

        <RadioButton
            android:id="@+id/respuesta5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion5"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/respuesta6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion6"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/respuesta7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion7"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/respuesta4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcion8"
            android:textSize="20sp" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/boton4"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/morado_oscuro"
        android:text="@string/boton_third_fragment"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radiogroup2" />
</androidx.constraintlayout.widget.ConstraintLayout>