<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/morado_oscuro"
        android:gravity="center"
        android:paddingStart="10dp"
        android:text="@string/titulo_first_fragment"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/edittext_first_fragment"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview1" />

    <Button
        android:id="@+id/boton1"
        android:layout_width="190dp"
        android:layout_height="60dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/morado_oscuro"
        android:text="@string/boton_first_fragment"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/editText1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>